--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,6 @@
   scroll-behavior: smooth;
   transition-duration: 0.35s;
 }
-
-html, body {
-  width: 100%;
-  height: 100%;
-}
 /* main section titles */
 h1 {
   font-family: 'Montserrat', sans-serif;
@@ -20,7 +15,6 @@ h1 {
 /* about section sub-headings */
 h3 {
   font-family: 'Montserrat', sans-serif;
-
 }
 /* portfolio section sub-headings */
 h4 {
@@ -157,7 +151,6 @@ footer {
   z-index: 0;
 }
 
-
 /* PORTFOLIO PAGE */
 .portfolio-page {
   color: white;
@@ -166,6 +159,7 @@ footer {
   position: relative;
   padding: 20px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
